@@ -494,6 +494,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 16548) list=search threw errors with an invalid error code
 * (bug 16515) Added pst and onlypst parameters to action=parse
 * (bug 16541) Added block expiry timestamp to list=logevents output
+* (bug 16613) action=protect doesn't tell when &cascade was set but cascading
+  protection wasn't allowed 
 
 === Languages updated in 1.14 ===
 
